profiles/leonardo/k8s/leonardo/leonardo-svc.yaml
apiVersion: v1
kind: Service
metadata:
   name: leonardo-service
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
  type: NodePort
  selector:
    service: leonardo
    environment: dev
    project: leonardo-solo
