profiles/leonardo/k8s/leonardo/network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-outbound
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      service: leonardo
      environment: dev
      project: leonardo-solo
  egress:
  - {}
  policyTypes:
  - Egress
